--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Kistlak\\LinkedinPoster\\LinkedInServiceProvider"
+                "Kistlak\\LinkedinPoster\\LinkedInPosterServiceProvider"
             ]
         }
     },
